--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -213,7 +213,7 @@
           </li>
 
           <li>
-            <a class="dropdown-item d-flex align-items-center" (click)="logout()">
+            <a class="dropdown-item d-flex align-items-center" routerLink="/" (click)="logout()">
               <i class="bi bi-box-arrow-right"></i>
               <span>Sign Out</span>
             </a>
