--- a/src/app/masters/businessplans/businessplans.component.html
+++ b/src/app/masters/businessplans/businessplans.component.html
@@ -1,73 +1,88 @@
 <div class="card">
   <div class="card-body">
-    <h5 class="card-title">Floating labels Form</h5>
+    <h5 class="mt-3 mb-4">Business Plan Details</h5>
 
-    <!-- Floating Labels Form -->
     <form class="row g-3" [formGroup]="formdata" (ngSubmit)="submit(formdata.value)">
-      <div class="col-md-3">
-        <div class="form-floating">
+      <div class="col-md-6">
+        <div class="form-floating form-group">
           <input type="text" class="form-control" formControlName="planname" placeholder="Plan name">
-          <label for="floatingName">Plan name</label>
+          <label for="floatingName">Enter Plan name<span style="color: red;">*</span></label>
+          <em class="error text-danger small" *ngIf="formdata.controls.planname.touched && formdata.controls.planname.invalid">Please enter your plan details</em>
         </div>
       </div>
 
-      <div class="col-md-3">
-        <div class="form-floating">
+      <div class="col-md-6">
+        <div class="form-floating form-group">
           <input type="text" class="form-control" formControlName="amount" placeholder="Amount">
-          <label for="floatingName">Amount</label>
+          <label for="floatingName">Amount<span style="color: red;">*</span></label>
+          <em class="error text-danger small" *ngIf="formdata.controls.amount.touched && formdata.controls.amount.invalid">Please enter your amount</em>
         </div>
       </div>
 
-      <div class="col-md-3">
-        <div class="form-floating">
+      <div class="col-md-6">
+        <div class="form-floating form-group">
           <input type="text" class="form-control" formControlName="duration" placeholder="Duration">
-          <label for="floatingName">Duration</label>
+          <label for="floatingName">Duration<span style="color: red;">*</span></label>
+          <em class="error text-danger small" *ngIf="formdata.controls.duration.touched && formdata.controls.duration.invalid">Please enter your time period</em>
         </div>
       </div>
 
-      <div class="col-md-3">
-        <div class="form-floating">
+      <div class="col-md-6">
+        <div class="form-floating form-group">
           <input type="text" class="form-control" formControlName="profileviews" placeholder="Profileviews">
-          <label for="floatingName">Profileviews</label>
+          <label for="floatingName">Profileviews<span style="color: red;">*</span></label>
+          <em class="error text-danger small" *ngIf="formdata.controls.profileviews.touched && formdata.controls.profileviews.invalid">Please enter profile views </em>
         </div>
       </div>
 
       <div class="text-center">
-        <button type="submit" class="btn btn-primary">Submit</button>
-        <button type="reset" (click)="reset()" class="btn btn-secondary ms-2">Reset</button>
+        <button type="submit" class="btn btn-primary" [disabled]="formdata.invalid">Submit</button>
+        <button type="reset" (click)="reset()" class="btn btn-danger ms-2">Cancel</button>
       </div>
-    </form><!-- End floating Labels Form -->
+    </form>
 
     <hr>
 
-    <div class="col-md-12 mt-4">
+    <div class="col-lg-12">
 
-      <h3 style="font-weight: 600;" class="text-center">Users Data</h3>
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Plan Details</h5>
 
-      <table class="table table-stripped">
+          <table class="table table-striped">
 
-        <thead>
-          <tr>
-            <td>Sr no</td>
-            <td>Plan Name</td>
-            <td>Amount</td>
-            <td>Duration</td>
-            <td>Profileviews</td>
-          </tr>
-        </thead>
+            <thead>
+              <tr>
+                  <th>Actions</th>
+                  <th>Sr no</th>
+                  <th>Plan Name</th>
+                  <th>Amount</th>
+                  <th>Duration</th>
+                  <th>Profileviews</th>
+              </tr>
+            </thead>
 
-        <tbody>
-          <tr *ngFor="let d of datas,let i = index">
-            <td>{{i+1}}</td>
-            <td>{{d.planname}}</td>
-            <td>{{d.amount}}</td>
-            <td>{{d.duration}}</td>
-            <td>{{d.profileviews}}</td>
-          </tr>
-        </tbody>
+            <tbody>
+              <tr *ngFor="let data of datas,let i = index">
+                <td>
+                  <button (click)="edit(data._id)" class="btn btn-primary"><i class="bi bi-pencil-square"></i></button>
+                  <button (click)="delete(data._id)" class="btn btn-danger ms-2"><i class="bi bi-trash"></i></button>
+                </td>
+                <td>{{i+1}}</td>
+                <td>{{data.planname}}</td>
+                <td>{{data.amount}}</td>
+                <td>{{data.duration}}</td>
+                <td>{{data.profileviews}}</td>
+              </tr>
+            </tbody>
 
-      </table>
+          </table>
+
+        </div>
+      </div>
+
     </div>
 
   </div>
 </div>
+
