--- a/src/app/masters/businessplans/businessplans.component.html
+++ b/src/app/masters/businessplans/businessplans.component.html
@@ -66,7 +66,7 @@
         </div>
         </div> -->
 
-      <div class="text-center">
+      <div>
         <button type="submit" class="btn btn-primary" [disabled]="formdata.invalid">Submit</button>
         <button type="reset" (click)="reset()" class="btn btn-danger ms-2">Cancel</button>
       </div>
